--- a/Prac2/styles/style.css
+++ b/Prac2/styles/style.css
@@ -1,6 +1,6 @@
 * {
-  /* padding: 0;
-  margin: 0; */
+  padding: 0;
+  margin: 0;
   box-sizing: border-box;
 }
 .logo {
@@ -12,8 +12,24 @@ nav {
 }
 
 .encabezados {
-  margin: 20px;
+  width: 400px;
+  margin: 0 auto 20px;
+  padding: 20px;
+
+  border: 2px solid black;
   color: blueviolet;
+  background-color: bisque;
+}
+
+.encabezados div {
+  width: 50%;
+}
+
+.parrafos {
+  padding: 20px;
+  border: 2px solid black;
+
+  background-color: darkgray;
 }
 
 .encabezados > h3 {
